--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -13,5 +13,23 @@
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
 
-	
+	<servlet>
+		<description></description>
+		<servlet-name>Registro</servlet-name>
+		<servlet-class>Registro</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Registro</servlet-name>
+		<url-pattern>/Registro</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<description></description>
+		<servlet-name>Login</servlet-name>
+		<servlet-class>Login</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Login</servlet-name>
+		<url-pattern>/Login</url-pattern>
+	</servlet-mapping>
 </web-app>
