--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -15,11 +15,11 @@
 
 	<servlet>
 		<description></description>
-		<servlet-name>Registrop</servlet-name>
-		<servlet-class>Registro</servlet-class>
+		<servlet-name>Registro</servlet-name>
+		<servlet-class>servlets.Registro</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>Registrop</servlet-name>
+		<servlet-name>Registro</servlet-name>
 		<url-pattern>/Registro</url-pattern>
 	</servlet-mapping>
 
